// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Order <AfterContent/> render() should display credit memos with links because there is an admin url suffix 1`] = `
<div>
  <div
    class="delimiter"
  >
    <a
      href="https://magento.gorgi.us/admin_123/sales/creditmemo/view/creditmemo_id/852/"
      rel="noopener noreferrer"
      target="_blank"
    >
      <div
        class="widgetField staticWidgetField"
      >
        <span
          class="widgetFieldLabel"
        >
          <i
            class="material-icons"
          >
            redeem
          </i>
           
          Credit memo
          :
           
        </span>
        <span
          class="widgetFieldValue"
        >
           
        </span>
      </div>
    </a>
    <div
      class="widgetField staticWidgetField"
    >
      <span
        class="widgetFieldLabel"
      >
        Last updated
        :
         
      </span>
      <span
        class="widgetFieldValue"
      >
        <time
          datetime="2018-11-07 05:22"
        />
      </span>
    </div>
    <div
      class="widgetField staticWidgetField"
    >
      <span
        class="widgetFieldValue"
      >
        4
         x 
        Sneakers
      </span>
    </div>
    <div
      class="widgetField staticWidgetField"
    >
      <span
        class="widgetFieldValue"
      >
        1
         x 
        T-shirt
      </span>
    </div>
  </div>
  <div
    class="delimiter"
  >
    <a
      href="https://magento.gorgi.us/admin_123/sales/creditmemo/view/creditmemo_id/854/"
      rel="noopener noreferrer"
      target="_blank"
    >
      <div
        class="widgetField staticWidgetField"
      >
        <span
          class="widgetFieldLabel"
        >
          <i
            class="material-icons"
          >
            redeem
          </i>
           
          Credit memo
          :
           
        </span>
        <span
          class="widgetFieldValue"
        >
           
        </span>
      </div>
    </a>
    <div
      class="widgetField staticWidgetField"
    >
      <span
        class="widgetFieldLabel"
      >
        Last updated
        :
         
      </span>
      <span
        class="widgetFieldValue"
      >
        <time
          datetime="2018-11-07 05:22"
        />
      </span>
    </div>
  </div>
</div>
`;

exports[`Order <AfterContent/> render() should display credit memos without links because there is no admin url suffix 1`] = `
<div>
  <div
    class="delimiter"
  >
    <a
      href=""
      rel="noopener noreferrer"
      target="_blank"
    >
      <div
        class="widgetField staticWidgetField"
      >
        <span
          class="widgetFieldLabel"
        >
          <i
            class="material-icons"
          >
            redeem
          </i>
           
          Credit memo
          :
           
        </span>
        <span
          class="widgetFieldValue"
        >
           
        </span>
      </div>
    </a>
    <div
      class="widgetField staticWidgetField"
    >
      <span
        class="widgetFieldLabel"
      >
        Last updated
        :
         
      </span>
      <span
        class="widgetFieldValue"
      >
        <time
          datetime="2018-11-07 05:22"
        />
      </span>
    </div>
    <div
      class="widgetField staticWidgetField"
    >
      <span
        class="widgetFieldValue"
      >
        4
         x 
        Sneakers
      </span>
    </div>
    <div
      class="widgetField staticWidgetField"
    >
      <span
        class="widgetFieldValue"
      >
        1
         x 
        T-shirt
      </span>
    </div>
  </div>
  <div
    class="delimiter"
  >
    <a
      href=""
      rel="noopener noreferrer"
      target="_blank"
    >
      <div
        class="widgetField staticWidgetField"
      >
        <span
          class="widgetFieldLabel"
        >
          <i
            class="material-icons"
          >
            redeem
          </i>
           
          Credit memo
          :
           
        </span>
        <span
          class="widgetFieldValue"
        >
           
        </span>
      </div>
    </a>
    <div
      class="widgetField staticWidgetField"
    >
      <span
        class="widgetFieldLabel"
      >
        Last updated
        :
         
      </span>
      <span
        class="widgetFieldValue"
      >
        <time
          datetime="2018-11-07 05:22"
        />
      </span>
    </div>
  </div>
</div>
`;

exports[`Order <AfterContent/> render() should return null because the order has no shipments nor credit memos 1`] = `<div />`;

exports[`Order <BeforeContent/> render() should display shipments with links because there is an admin url suffix 1`] = `
<div>
  <div
    class="widgetField staticWidgetField"
  >
    <span
      class="widgetFieldLabel"
    >
      State
      :
       
    </span>
    <span
      class="widgetFieldValue"
    >
      <div
        class="badge"
      >
        New
      </div>
    </span>
  </div>
  <div
    class="widgetField staticWidgetField"
  >
    <span
      class="widgetFieldLabel"
    >
      Created at
      :
       
    </span>
    <span
      class="widgetFieldValue"
    >
      <time
        datetime="\\"2020-10-07 09:30:03\\""
      />
    </span>
  </div>
  <div
    class="section"
  >
    <div
      class="widgetCardHeader"
    >
      <a
        href="https://magento.gorgi.us/admin_123/sales/shipment/view/shipment_id/963/"
        rel="noopener noreferrer"
        target="_blank"
      >
        <i
          class="material-icons"
        >
          local_shipping
        </i>
         
        <span>
          Shipment
        </span>
      </a>
    </div>
    <div
      class="widgetField staticWidgetField"
    >
      <span
        class="widgetFieldLabel"
      >
        Last updated
        :
         
      </span>
      <span
        class="widgetFieldValue"
      >
        <time
          datetime="2019-03-04 11:12"
        />
      </span>
    </div>
    <div>
      <div
        class="widgetField staticWidgetField"
      >
        <span
          class="widgetFieldLabel"
        >
          Carrier code
          :
           
        </span>
        <span
          class="widgetFieldValue"
        >
          UPS
        </span>
      </div>
      <div
        class="widgetField staticWidgetField"
      >
        <span
          class="widgetFieldLabel"
        >
          Tracking number
          :
           
        </span>
        <span
          class="widgetFieldValue"
        >
          123ABC
        </span>
      </div>
      <div
        class="widgetField staticWidgetField"
      >
        <span
          class="widgetFieldLabel"
        >
          Tracking URL
          :
           
        </span>
        <span
          class="widgetFieldValue"
        >
          -
        </span>
      </div>
    </div>
    <div
      class="widgetField staticWidgetField"
    >
      <span
        class="widgetFieldValue"
      >
        4
         x 
        Sneakers
      </span>
    </div>
    <div
      class="widgetField staticWidgetField"
    >
      <span
        class="widgetFieldValue"
      >
        1
         x 
        Pants
      </span>
    </div>
  </div>
  <div
    class="section"
  >
    <div
      class="widgetCardHeader"
    >
      <a
        href="https://magento.gorgi.us/admin_123/sales/shipment/view/shipment_id/741/"
        rel="noopener noreferrer"
        target="_blank"
      >
        <i
          class="material-icons"
        >
          local_shipping
        </i>
         
        <span>
          Shipment
        </span>
      </a>
    </div>
    <div
      class="widgetField staticWidgetField"
    >
      <span
        class="widgetFieldLabel"
      >
        Last updated
        :
         
      </span>
      <span
        class="widgetFieldValue"
      >
        <time
          datetime="2019-02-04 11:12"
        />
      </span>
    </div>
    <div>
      <div
        class="widgetField staticWidgetField"
      >
        <span
          class="widgetFieldLabel"
        >
          Carrier code
          :
           
        </span>
        <span
          class="widgetFieldValue"
        >
          LaPoste
        </span>
      </div>
      <div
        class="widgetField staticWidgetField"
      >
        <span
          class="widgetFieldLabel"
        >
          Tracking number
          :
           
        </span>
        <span
          class="widgetFieldValue"
        >
          789GHJ
        </span>
      </div>
      <div
        class="widgetField staticWidgetField"
      >
        <span
          class="widgetFieldLabel"
        >
          Tracking URL
          :
           
        </span>
        <span
          class="widgetFieldValue"
        >
          -
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`Order <BeforeContent/> render() should display shipments without links because there is no admin url suffix 1`] = `
<div>
  <div
    class="widgetField staticWidgetField"
  >
    <span
      class="widgetFieldLabel"
    >
      State
      :
       
    </span>
    <span
      class="widgetFieldValue"
    >
      <div
        class="badge"
      >
        New
      </div>
    </span>
  </div>
  <div
    class="widgetField staticWidgetField"
  >
    <span
      class="widgetFieldLabel"
    >
      Created at
      :
       
    </span>
    <span
      class="widgetFieldValue"
    >
      <time
        datetime="\\"2020-10-07 09:30:03\\""
      />
    </span>
  </div>
  <div
    class="section"
  >
    <div
      class="widgetCardHeader"
    >
      <a
        href=""
        rel="noopener noreferrer"
        target="_blank"
      >
        <i
          class="material-icons"
        >
          local_shipping
        </i>
         
        <span>
          Shipment
        </span>
      </a>
    </div>
    <div
      class="widgetField staticWidgetField"
    >
      <span
        class="widgetFieldLabel"
      >
        Last updated
        :
         
      </span>
      <span
        class="widgetFieldValue"
      >
        <time
          datetime="2019-03-04 11:12"
        />
      </span>
    </div>
    <div>
      <div
        class="widgetField staticWidgetField"
      >
        <span
          class="widgetFieldLabel"
        >
          Carrier code
          :
           
        </span>
        <span
          class="widgetFieldValue"
        >
          UPS
        </span>
      </div>
      <div
        class="widgetField staticWidgetField"
      >
        <span
          class="widgetFieldLabel"
        >
          Tracking number
          :
           
        </span>
        <span
          class="widgetFieldValue"
        >
          123ABC
        </span>
      </div>
      <div
        class="widgetField staticWidgetField"
      >
        <span
          class="widgetFieldLabel"
        >
          Tracking URL
          :
           
        </span>
        <span
          class="widgetFieldValue"
        >
          -
        </span>
      </div>
    </div>
    <div
      class="widgetField staticWidgetField"
    >
      <span
        class="widgetFieldValue"
      >
        4
         x 
        Sneakers
      </span>
    </div>
    <div
      class="widgetField staticWidgetField"
    >
      <span
        class="widgetFieldValue"
      >
        1
         x 
        Pants
      </span>
    </div>
  </div>
  <div
    class="section"
  >
    <div
      class="widgetCardHeader"
    >
      <a
        href=""
        rel="noopener noreferrer"
        target="_blank"
      >
        <i
          class="material-icons"
        >
          local_shipping
        </i>
         
        <span>
          Shipment
        </span>
      </a>
    </div>
    <div
      class="widgetField staticWidgetField"
    >
      <span
        class="widgetFieldLabel"
      >
        Last updated
        :
         
      </span>
      <span
        class="widgetFieldValue"
      >
        <time
          datetime="2019-02-04 11:12"
        />
      </span>
    </div>
    <div>
      <div
        class="widgetField staticWidgetField"
      >
        <span
          class="widgetFieldLabel"
        >
          Carrier code
          :
           
        </span>
        <span
          class="widgetFieldValue"
        >
          LaPoste
        </span>
      </div>
      <div
        class="widgetField staticWidgetField"
      >
        <span
          class="widgetFieldLabel"
        >
          Tracking number
          :
           
        </span>
        <span
          class="widgetFieldValue"
        >
          789GHJ
        </span>
      </div>
      <div
        class="widgetField staticWidgetField"
      >
        <span
          class="widgetFieldLabel"
        >
          Tracking URL
          :
           
        </span>
        <span
          class="widgetFieldValue"
        >
          -
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`Order <BeforeContent/> render() should render the state and an empty created at date but no shipments because there are none 1`] = `
<div>
  <div
    class="widgetField staticWidgetField"
  >
    <span
      class="widgetFieldLabel"
    >
      State
      :
       
    </span>
    <span
      class="widgetFieldValue"
    >
      <div
        class="badge"
      >
        New
      </div>
    </span>
  </div>
  <div
    class="widgetField staticWidgetField"
  >
    <span
      class="widgetFieldLabel"
    >
      Created at
      :
       
    </span>
    <span
      class="widgetFieldValue"
    >
      <time />
    </span>
  </div>
</div>
`;

exports[`Order <BeforeContent/> render() should render with a label for the canceled state and a created at date but no shipments because there are none 1`] = `
<div>
  <div
    class="widgetField staticWidgetField"
  >
    <span
      class="widgetFieldLabel"
    >
      State
      :
       
    </span>
    <span
      class="widgetFieldValue"
    >
      <div
        class="badge"
      >
        Canceled
      </div>
    </span>
  </div>
  <div
    class="widgetField staticWidgetField"
  >
    <span
      class="widgetFieldLabel"
    >
      Created at
      :
       
    </span>
    <span
      class="widgetFieldValue"
    >
      <time
        datetime="\\"2020-10-07 09:30:03\\""
      />
    </span>
  </div>
</div>
`;

exports[`Order <BeforeContent/> render() should render with a label for the closed state and a created at date but no shipments because there are none 1`] = `
<div>
  <div
    class="widgetField staticWidgetField"
  >
    <span
      class="widgetFieldLabel"
    >
      State
      :
       
    </span>
    <span
      class="widgetFieldValue"
    >
      <div
        class="badge"
      >
        Closed
      </div>
    </span>
  </div>
  <div
    class="widgetField staticWidgetField"
  >
    <span
      class="widgetFieldLabel"
    >
      Created at
      :
       
    </span>
    <span
      class="widgetFieldValue"
    >
      <time
        datetime="\\"2020-10-07 09:30:03\\""
      />
    </span>
  </div>
</div>
`;

exports[`Order <BeforeContent/> render() should render with a label for the complete state and a created at date but no shipments because there are none 1`] = `
<div>
  <div
    class="widgetField staticWidgetField"
  >
    <span
      class="widgetFieldLabel"
    >
      State
      :
       
    </span>
    <span
      class="widgetFieldValue"
    >
      <div
        class="badge"
      >
        Complete
      </div>
    </span>
  </div>
  <div
    class="widgetField staticWidgetField"
  >
    <span
      class="widgetFieldLabel"
    >
      Created at
      :
       
    </span>
    <span
      class="widgetFieldValue"
    >
      <time
        datetime="\\"2020-10-07 09:30:03\\""
      />
    </span>
  </div>
</div>
`;

exports[`Order <BeforeContent/> render() should render with a label for the new state and a created at date but no shipments because there are none 1`] = `
<div>
  <div
    class="widgetField staticWidgetField"
  >
    <span
      class="widgetFieldLabel"
    >
      State
      :
       
    </span>
    <span
      class="widgetFieldValue"
    >
      <div
        class="badge"
      >
        New
      </div>
    </span>
  </div>
  <div
    class="widgetField staticWidgetField"
  >
    <span
      class="widgetFieldLabel"
    >
      Created at
      :
       
    </span>
    <span
      class="widgetFieldValue"
    >
      <time
        datetime="\\"2020-10-07 09:30:03\\""
      />
    </span>
  </div>
</div>
`;

exports[`Order <BeforeContent/> render() should render with a label for the on_hold state and a created at date but no shipments because there are none 1`] = `
<div>
  <div
    class="widgetField staticWidgetField"
  >
    <span
      class="widgetFieldLabel"
    >
      State
      :
       
    </span>
    <span
      class="widgetFieldValue"
    >
      <div
        class="badge"
      >
        On hold
      </div>
    </span>
  </div>
  <div
    class="widgetField staticWidgetField"
  >
    <span
      class="widgetFieldLabel"
    >
      Created at
      :
       
    </span>
    <span
      class="widgetFieldValue"
    >
      <time
        datetime="\\"2020-10-07 09:30:03\\""
      />
    </span>
  </div>
</div>
`;

exports[`Order <BeforeContent/> render() should render with a label for the pending state and a created at date but no shipments because there are none 1`] = `
<div>
  <div
    class="widgetField staticWidgetField"
  >
    <span
      class="widgetFieldLabel"
    >
      State
      :
       
    </span>
    <span
      class="widgetFieldValue"
    >
      <div
        class="badge"
      >
        Pending
      </div>
    </span>
  </div>
  <div
    class="widgetField staticWidgetField"
  >
    <span
      class="widgetFieldLabel"
    >
      Created at
      :
       
    </span>
    <span
      class="widgetFieldValue"
    >
      <time
        datetime="\\"2020-10-07 09:30:03\\""
      />
    </span>
  </div>
</div>
`;

exports[`Order <BeforeContent/> render() should render with a label for the processing state and a created at date but no shipments because there are none 1`] = `
<div>
  <div
    class="widgetField staticWidgetField"
  >
    <span
      class="widgetFieldLabel"
    >
      State
      :
       
    </span>
    <span
      class="widgetFieldValue"
    >
      <div
        class="badge"
      >
        Processing
      </div>
    </span>
  </div>
  <div
    class="widgetField staticWidgetField"
  >
    <span
      class="widgetFieldLabel"
    >
      Created at
      :
       
    </span>
    <span
      class="widgetFieldValue"
    >
      <time
        datetime="\\"2020-10-07 09:30:03\\""
      />
    </span>
  </div>
</div>
`;

exports[`Order <TitleWrapper/> render() should not render link because there is no admin url suffix 1`] = `
<div>
  <div>
    foo bar
  </div>
</div>
`;

exports[`Order <TitleWrapper/> render() should render link 1`] = `
<div>
  <a
    href="https://magento.gorgi.us/admin_12df/sales/order/view/order_id/1/"
    rel="noopener noreferrer"
    target="_blank"
  >
    <div>
      foo bar
    </div>
  </a>
   
</div>
`;
